--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "react-reflection-board",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:5002",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
+    "dotenv": "^16.0.3",
+    "env": "^0.0.2",
     "express": "^4.17.1",
     "pg": "^8.3.2",
     "react": "^17.0.1",
